--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Wireframe exercise</title>
 </head>
 <body>
+    <nav>
+        <div id="logo">Logo</div>
+        <div class="navitem">Nav Item 1</div>
+        <div class="navitem">Nav Item 2</div>
+        <div class="navitem">Nav Item 3</div>
+        <div class="navitem">Nav Item 4</div>
+    </nav>
+
     
 </body>
 </html>
