added center box

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="navitem">Nav Item 3</div>
         <div class="navitem">Nav Item 4</div>
     </nav>
+    <section>960x450</section>
 
     
 </body>
