--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Wireframe exercise</title>
+    <title>Wireframe Exercise</title>
 </head>
 <body>
     <nav>
@@ -16,8 +16,14 @@
         <div class="navitem">Nav Item 3</div>
         <div class="navitem">Nav Item 4</div>
     </nav>
-    <section>960x450</section>
-
+    <p>
+        <div>
+            <img src="https://dummyimage.com/960x450/000/fff" alt="placeholder image 960x450">
+        </div>
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+    </p>
     
 </body>
 </html>
