completed first set of sections

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="navitem">Nav Item 3</div>
         <div class="navitem">Nav Item 4</div>
     </nav>
-    <p>
+    <section>
         <div>
             <img src="https://dummyimage.com/960x450/000/fff" alt="placeholder image 960x450">
         </div>
-        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
-        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
-        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
-    </p>
     
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+        <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
+    </section>
 </body>
 </html>
