--- a/index.html
+++ b/index.html
@@ -26,14 +26,23 @@
         <img src="https://dummyimage.com/300x375/000/fff" alt="placeholder image 300x375">
     </section>
     <section>
-        <img src="https://dummyimage.com/480x375/000/fff" alt="placeholder image 480x375">
-        <article>What is Lorem Ipsum?
+        <img src="https://dummyimage.com/480x400/000/fff" alt="placeholder image 480x400">
+        <article>
+            <div id="sectionheader">Featured Section Header</div>
+            <p>
+            What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
-            is Lorem Ipsum</article>
+            is Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
+            is Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.What is Lorem Ipsum?
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
+            is Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
+            is Lorem Ipsum</p></article>
     </section>
+    <footer></footer>
 </body>
 </html>
