finished all sections, changed out margins, cleaned up some of the code. Finished footer and gutters. finshed button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
             is Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's What is Lorem Ipsum?Lorem Ipsum has been the industry's What 
-            is Lorem Ipsum</p></article>
+            is Lorem Ipsum</p><button>Call to Action</button></article>
+            
+            
     </section>
     <footer></footer>
 </body>
